--- a/css/style.css
+++ b/css/style.css
@@ -464,7 +464,7 @@ img {
     opacity: 0;
     pointer-events: none;
     */
-    transition: opacity 250mc cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
