--- a/css/style.css
+++ b/css/style.css
@@ -740,6 +740,7 @@ img {
 .footer-form {
     display:flex;
     align-items: center;
+    gap: 24px;
 }
 
 .footer-form-input {
@@ -748,7 +749,6 @@ img {
     background-color: inherit;
     border-radius: 4px;
     border: 1px solid #fff;
-    margin-right: 24px;
     padding: 8px 16px;
     font-weight: 400;
     font-size: 12px;
