--- a/css/style.css
+++ b/css/style.css
@@ -464,7 +464,7 @@ img {
     opacity: 0;
     pointer-events: none;
     */
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay.is-open {
@@ -473,12 +473,19 @@ img {
 }
 
 .modal {
-    background-color: #fff;
+    background-color: #fcfcfc;
     width: 408px;
     min-height: 584px;
     padding: 72px 24px 24px 24px;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon {
@@ -492,9 +499,6 @@ img {
     height: 24px;
     cursor: pointer;
     margin-bottom: 24px;
-    position: absolute;
-    top: 24px;
-    right: 24px;
     transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -755,10 +759,13 @@ img {
     line-height: 200%;
     letter-spacing: 0.04em;
     color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .sbc-button {
     display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 4px;
     padding: 8px 24px;
     min-width: 165px;
