--- a/css/style.css
+++ b/css/style.css
@@ -608,13 +608,12 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* -- 
     opacity: 0;
     pointer-events: none;
-    */
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* form open*/
 .modal-overlay.is-open {
     opacity: 1;
     pointer-events: auto;
